tests/data/setup/ingresses/ats-ingress-2.yaml
#  Licensed to the Apache Software Foundation (ASF) under one
#  or more contributor license agreements.  See the NOTICE file
#  distributed with this work for additional information
#  regarding copyright ownership.  The ASF licenses this file
#  to you under the Apache License, Version 2.0 (the
#  "License"); you may not use this file except in compliance
#  with the License.  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

apiVersion: v1
kind: Namespace
metadata:
  name: trafficserver-test-3

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: trafficserver-test-3
  annotations:
    ats.ingress.kubernetes.io/server-snippet: |
      ts.debug('Debug msg example')
      ts.error('Error msg example')
      -- ts.hook(TS_LUA_HOOK_SEND_RESPONSE_HDR, function()
      --   ts.client_response.header['Location'] = 'https://test.edge.com/app2'
      -- end)
      -- ts.http.skip_remapping_set(0)
      -- ts.http.set_resp(301, 'Redirect')
      ts.debug('Uncomment the above lines to redirect http request to https')
spec:
  rules:
  - host: test.edge.com
    http:
      paths:
      - path: /app2
        pathType: Exact
        backend:
          service:
            name: appsvc2
            port:
              number: 8080
